--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+ext{
+    okhttp_version = '3.6.0'
+    retrofit_version = '2.2.0'
+    rxjava_version = '2.1.0'
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.2"
@@ -29,6 +35,26 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.joanzapata.iconify:android-iconify-weathericons:2.2.2'
+
+    // DI
+    compile "org.koin:koin-android:0.3.1"
+
+//json
+    compile 'com.google.code.gson:gson:2.8.0'
+
+// Networking
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+   // compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    compile "com.squareup.okhttp3:okhttp:$okhttp_version"
+    compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+
+// Rx
+  //  compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
+  //  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     testCompile 'junit:junit:4.12'
 }
 repositories {
