--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:$okhttp_version"
     compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+
 // Rx
   //  compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
   //  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
