--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ ext {
 }
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "weather.lyra.com.weatherapp"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,7 +33,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.joanzapata.iconify:android-iconify-weathericons:2.2.2'
@@ -51,8 +51,8 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:$okhttp_version"
     compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+
+    compile 'com.android.support:design:26.1.0'
 
 // Rx
     compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
@@ -63,4 +63,5 @@ dependencies {
 }
 repositories {
     mavenCentral()
+    google()
 }
